[gd_scene load_steps=4 format=3 uid="uid://c5cvuxs4lq1sj"]

[ext_resource type="Script" uid="uid://dgb2r3ag8baxc" path="res://scripts/mask_selection.gd" id="1_mask_sel"]
[ext_resource type="Texture2D" uid="uid://b3pp3gdmvfmv7" path="res://assets/images/ui/back_normal.png" id="2_back_normal"]
[ext_resource type="Texture2D" uid="uid://cxbl8412fxr0c" path="res://assets/images/ui/back_icon.png" id="3_back_icon"]

[node name="MaskSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mask_sel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.92, 0.95, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.4, 0.6, 1)
theme_override_font_sizes/font_size = 36
text = "üé≠ Ch·ªçn style m·∫∑t n·∫° üé≠"
horizontal_alignment = 1

[node name="MasksContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Mask1VBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MasksContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Mask1Button" type="TextureButton" parent="CenterContainer/VBoxContainer/MasksContainer/Mask1VBox"]
custom_minimum_size = Vector2(160, 120)
layout_mode = 2
size_flags_horizontal = 4
ignore_texture_size = true
stretch_mode = 5

[node name="Mask1Label" type="Label" parent="CenterContainer/VBoxContainer/MasksContainer/Mask1VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.5, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Full M·∫∑t"
horizontal_alignment = 1

[node name="Mask3VBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MasksContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Mask3Button" type="TextureButton" parent="CenterContainer/VBoxContainer/MasksContainer/Mask3VBox"]
custom_minimum_size = Vector2(160, 120)
layout_mode = 2
size_flags_horizontal = 4
ignore_texture_size = true
stretch_mode = 5

[node name="Mask3Label" type="Label" parent="CenterContainer/VBoxContainer/MasksContainer/Mask3VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.5, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Kh·∫©u Trang"
horizontal_alignment = 1

[node name="BackButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = -98.0
offset_right = -37.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 8
alignment = 1

[node name="BackIcon" type="TextureRect" parent="BackButtonContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
texture = ExtResource("3_back_icon")
expand_mode = 1
stretch_mode = 5

[node name="BackButton" type="TextureButton" parent="BackButtonContainer"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
texture_normal = ExtResource("2_back_normal")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="BackButtonContainer/BackButton" to="." method="_on_back_pressed"]
